--- a/windfinder-widget.html
+++ b/windfinder-widget.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h2>Aktuelles Wetter am Frohnhof (Sinnersdorf)</h2>
+  <h2>Aktuelles Wetter am Frohnhof </h2>
 
   <script src="https://www.windfinder.com/widget/forecast/js/sinnersdorf_north_rhine_westphalia_germany?unit_wave=m&unit_rain=mm&unit_temperature=c&unit_wind=kmh&unit_pressure=hPa&days=1&show_day=1&show_pressure=0&show_waves=0"></script>
 
